Implemented error handling thoughout the code.
Four custom popup widgets were defined in MainApplication.kv in order to reduce code reuse -

InvalidIPAddressPopup

NetmikoTimeoutPopup

NetmikoAuthenticateFailurePopup

NetmikoSSHFailurePopup

Within python files that require user to input IP address the standard Python module 'ipaddress' has been imported in order to provide IP address validation.

Within python files that use netmiko to interact devices the netmiko error execption modules 'NetMikoTimeoutException' and 'AuthenticationException' have been imported to provide error handling

On successful completion of functions popups will open and inform the user that configurations have been made.

--- a/MainApplication.kv
+++ b/MainApplication.kv
@@ -148,3 +148,50 @@
                 text: 'Intiate Connection'
                 size_hint: 0.5, 0.2
                 on_release: root.dismiss()
+
+
+
+ #Create a Custom PopUp Widget for when no IP address is entered 
+
+<InvalidIPAddressPopup@Popup>:
+    size_hint: 0.5, 0.3
+    title: ""
+    Label: 
+        text: 'Please enter a valid IP address'
+
+
+
+
+ #Create a Custom PopUp Widget for when Netmiko is unable to connect to a device 
+
+<NetmikoTimeoutPopup@Popup>:
+    size_hint: 0.5, 0.3
+    title: ""
+    Label: 
+        text: 'Unable to connect to device - Connection time out'
+
+
+
+
+ #Create a Custom PopUp Widget for when Netmiko is unable to authenticate to a device 
+
+<NetmikoAuthenticateFailurePopup@Popup>:
+    size_hint: 0.5, 0.3
+    title: ""
+    Label: 
+        text: 'Unable to connect to device - Failed to authenticate'
+
+
+
+
+ #Create a Custom PopUp Widget for when Netmiko is unable to due to SSH not being enabled
+
+<NetmikoSSHFailurePopup@Popup>:
+    size_hint: 0.5, 0.3
+    title: ""
+    Label: 
+        text: 'Unable to connect to device - SSH is not enabled'
+
+
+
+    
