--- a/MainApplication.kv
+++ b/MainApplication.kv
@@ -109,12 +109,16 @@
 
  #Create a Custom PopUp Widget for Username and Password Entry
 
-<DeviceUsernameAndPasswordPopup@Popup>:
+<DeviceUsernameAndPasswordPopup>:
     auto_dismiss: False
+    title: "Device Credentials"
     size_hint: 0.5, 0.5
     RelativeLayout:
+        id: Rel1
         RelativeLayout:
+            id: Rel2
             GridLayout:
+                id: Grid1
                 orientation: 'vertical' 
                 cols: 1
                 padding: 5
@@ -145,6 +149,7 @@
             anchor_y: 'bottom'
             padding: 5
             Button:
+                id: IntiateConnectionButton
                 text: 'Intiate Connection'
                 size_hint: 0.5, 0.2
                 on_release: root.dismiss()
