--- a/Menus/DeviceInfoAndChangeControlMenu.kv
+++ b/Menus/DeviceInfoAndChangeControlMenu.kv
@@ -205,7 +205,9 @@
 
 
 
-<DeviceInfoChangeControl>:
+
+
+<DeviceInfoChangeControlMenu@Screen>:
     on_pre_enter: app.current_screen = "Device Information and Change Control - Change Control"
     on_pre_enter: app.previous_screen.append('DeviceInfoChangeControlScreen')
     name: 'DeviceInfoChangeControlScreen'
@@ -219,9 +221,53 @@
             height: 50
     AnchorLayout:
         anchor_x: 'center'
-        anchor_y: 'center'
-        DeviceInfoChangeControlLayout:
-            id: _Device_Info_Change_Control_Layout_
+        anchor_y: 'bottom'
+        DeviceInfoChangeControlMenuButtons:
+            id: _Device_Info_Change_Control_Menu_Buttons_
+            main_menu_root: root
+            size_hint: 0.9, None
+            padding: 50
+            height: root.height - _Menu_Bar.height
+
+
+
+<DeviceInfoChangeControlMenuButtons>:
+    orientation: 'vertical'
+    padding: 5
+    spacing: 2
+    Button:
+        text: 'Save Configuration From Device'
+        on_release: root.DeviceInfoChangeControlSaveConfButton(*args)
+    Button:
+        text: 'Upload Configuration To Device'
+        on_release: root.DeviceInfoChangeControlUploadConfButton(*args)
+    Button:
+        text: 'Compare Configurations'
+        on_release: root.DeviceInfoChangeControlCompareConfButton(*args)
+		
+
+
+
+
+
+<DeviceInfoChangeControlSaveConf>:
+    on_pre_enter: app.current_screen = "Change Control - Save Configuration"
+    on_pre_enter: app.previous_screen.append('DeviceInfoChangeControlSaveConfScreen')
+    name: 'DeviceInfoChangeControlSaveConfScreen'
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'top'
+        MenuBar:
+            id: _Menu_Bar
+            main_menu_root: root
+            size_hint: 1, None
+            height: 50
+    FloatLayout:
+        #anchor_x: 'center'
+        #anchor_y: 'center'
+        DeviceInfoChangeControlSaveConfLayout:
+            id: _Device_Info_Change_Control_Save_Conf_Layout_
+            pos_hint:{'center_x':0.5, 'y':0.5}
             main_menu_root: root
             size_hint: 0.9, None
     AnchorLayout:
@@ -237,25 +283,242 @@
         padding: 5
         Execute:
             id: _Execute_Button_
+            on_release: root.DeviceInfoChangeControlSaveConfExecute()
+            
+    
+<DeviceInfoChangeControlSaveConfLayout@GridLayout>:
+    orientation: 'vertical'
+    rows: 2
+    spacing: 2
+    GridLayout:
+        orientation: 'vertical'
+        rows: 1
+        Label:
+            text: ''
+        Label:
+            text: 'Runinng Configuration'
+        Label:
+            text: 'Start-Up Configuration'
+    GridLayout:
+        orientation: 'vertical'
+        rows: 1
+        Label: 
+            text: 'Select Configuration Type to Save'
+            size_hint_y: None
+            height: RunningTrue.height
+            text_size: self.width, None
+        CheckBox:
+            id: RunningTrue
+            size_hint_y: None
+            height: '32dp'
+            group: 'SaveConfSelect'
+            active: True
+        CheckBox:
+            id: StartupTrue
+            size_hint_y: None
+            height: '32dp'
+            group: 'SaveConfSelect'  
+
+
+
+
+<DeviceInfoChangeControlUploadConf>:
+    on_pre_enter: app.current_screen = "Change Control - Upload Configuration"
+    on_pre_enter: app.previous_screen.append('DeviceInfoChangeControlUploadConfScreen')
+    name: 'DeviceInfoChangeControlUploadConfScreen'
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'top'
+        MenuBar:
+            id: _Menu_Bar
+            main_menu_root: root
+            size_hint: 1, None
+            height: 50
+    FloatLayout:
+        Label:
+            id: _Device_Info_Change_Control_Upload_Conf_Label_
+            pos_hint:{'center_x':0.5, 'y':0.35}
+            text: "Select the configuration file to upload"
+            height: '32dp'
+    FloatLayout:
+        DeviceInfoChangeControlUploadConfLayout:
+            id: _Device_Info_Change_Control_Upload_Conf_Layout_
+            pos_hint:{'center_x':0.5, 'y':0.17}
+            main_menu_root: root
+            padding: 25
+            size_hint: 0.9, 0.7
+            height: root.height - _Menu_Bar.height - _IPv4_Target_Device_Layout_.height - _Execute_Button_.height - _Device_Info_Change_Control_Upload_Conf_Label_.height
+    #FloatLayout: #To be used if NAPALM can be fixed to allow user to select configuration upload type
+        #padding: 5
+        #DeviceInfoChangeControlUploadConfUploadType
+            #id: _Device_Info_Change_Control_Upload_Conf_Upload_Type_
+           #pos_hint:{'center_x':0.5, 'y':0.2}
+            #size_hint: 0.9, None
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'bottom'
+        padding: 15
+        IPv4TargetDeviceLayout
+            id: _IPv4_Target_Device_Layout_
+            size_hint: 0.9, None
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'bottom'
+        padding: 5
+        Execute:
+            id: _Execute_Button_
+            on_release: root.DeviceInfoChangeControlUploadConfExecute()
             
 
+		
+<DeviceInfoChangeControlUploadConfLayout@BoxLayout>
+    orientation: 'vertical'
+    BoxLayout:
+        size_hint_y: None
+        height: '48dp'
 
+        ToggleButton:
+            text: 'Icon View'
+            state: 'down'
+            group: 'filechooser'
+            on_release: FileChooser.view_mode = 'icon'
+
+        ToggleButton:
+            text: 'List View'
+            group: 'filechooser'
+            on_release: FileChooser.view_mode = 'list'
+    FileChooser:
+        id: FileChooser
+        path: app.selected_storage_directory + '/Outputs/SaveConfOutput/'
+
+        FileChooserIconLayout
+        FileChooserListLayout
+    
+
+<DeviceInfoChangeControlUploadConfUploadType@GridLayout>: #To be used if NAPALM can be fixed
+    orientation: 'vertical'
+    rows: 2
+    spacing: 2
+    GridLayout:
+        orientation: 'vertical'
+        rows: 1
+        Label:
+            text: ''
+        Label:
+            text: 'Replace Configuration'
+        Label:
+            text: 'Merge Configuration'
+    GridLayout:
+        orientation: 'vertical'
+        rows: 1
+        Label: 
+            text: 'Select Configuration Upload Method'
+            size_hint_y: None
+            height: ReplaceTrue.height
+            text_size: self.width, None
+        CheckBox:
+            id: ReplaceTrue
+            size_hint_y: None
+            height: '32dp'
+            group: 'UploadConfType'
+            active: True
+        CheckBox:
+            id: MergeTrue
+            size_hint_y: None
+            height: '32dp'
+            group: 'UploadConfType'  
+
+
+
+
+<DeviceInfoChangeControlCompareConf>:
+    on_pre_enter: app.current_screen = "Change Control - Compare Configurations"
+    on_pre_enter: app.previous_screen.append('DeviceInfoChangeControlCompareConfScreen')
+    name: 'DeviceInfoChangeControlCompareConfScreen'
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'top'
+        MenuBar:
+            id: _Menu_Bar
+            main_menu_root: root
+            size_hint: 1, None
+            height: 50
+    FloatLayout:
+        #anchor_x: 'center'
+        #anchor_y: 'center'
+        DeviceInfoChangeControlCompareConfLayout:
+            id: _Device_Info_Change_Control_Compare_Conf_Layout_
+            pos_hint:{'center_x':0.5, 'y':0.7}
+            main_menu_root: root
+            size_hint: 0.9, None
+    FloatLayout:
+        padding: 5
+        DeviceInfoChangeControlCompareConfFileSelect
+            id: _Device_Info_Change_Control_Compare_Conf_File_Select_
+            pos_hint:{'center_x':0.5, 'y':0.1}
+            size_hint: 0.9, None
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'bottom'
+        padding: 5
+        Execute:
+            id: _Execute_Button_
+            on_release: root.DeviceInfoChangeControlCompareConfExecute()
+            
 
         
-<DeviceInfoChangeControlLayout@GridLayout>:
-    orientation: 'vertical'
-    cols: 2
+<DeviceInfoChangeControlCompareConfLayout@GridLayout>:
+    orientation: 'vertical' 
+    rows: 3
     padding: 5
-    spacing: 2
+    spacing: 25
     Label: 
-        text: 'Enter IPv4 Address of  Target Device'
+        id: CompareConfLabel
+        markup: True
+        text: 'Configuration Comparison'
         size_hint_y: None
-        height: IPv4AddressTextInput.height
-    IPv4AddressInput:
-        id: IPv4AddressTextInput
+        height: '32dp'
 
-		
-		
+    TextInput:
+        id: PolledDeviceInfoOutput
+        readonly: True
+        size_hint_y: None
+        height: '280dp'
+        line_spacing: 13
+        text: ''
+
+<DeviceInfoChangeControlCompareConfFileSelect@GridLayout>:
+    orientation: 'vertical' 
+    cols: 2
+    spacing: 5
+    Button:
+        text: 'Set File 1'
+        on_release: root.DeviceInfoChangeControlButton(*args)
+        size_hint_y: None
+        height: '32dp'
+    Button:
+        text: 'Set File 2'
+        on_release: root.DeviceInfoChangeControlButton(*args)
+        size_hint_y: None
+        height: '32dp'
+    Label: 
+        id: CompareConfFile1Label
+        markup: True
+        text: 'File 1: '
+        size_hint_y: None
+        height: '32dp'
+        text_size: self.size
+        halign: 'left'
+    Label: 
+        id: CompareConfFile2Label
+        markup: True
+        text: 'File 2: '
+        size_hint_y: None
+        height: '32dp'
+        text_size: self.size
+        halign: 'left'
+            
+
 		
 		
 		
