--- a/Menus/IntConfMenu.kv
+++ b/Menus/IntConfMenu.kv
@@ -62,6 +62,15 @@
             main_menu_root: root
             size_hint: 0.9, None
     AnchorLayout:
+        anchor_x: 'left'
+        anchor_y: 'bottom'
+        padding: 5
+        Button:
+            id: _Device_Credentials_Button_
+            text: 'Set Device \nCredentials'
+            size_hint: 0.16, 0.08
+            on_release: root.OpenCredentialPopup()
+    AnchorLayout:
         anchor_x: 'center'
         anchor_y: 'bottom'
         padding: 15
@@ -116,6 +125,15 @@
             pos_hint:{'center_x':0.6, 'y':0.57}
             main_menu_root: root
             size_hint: 0.7, None
+    AnchorLayout:
+        anchor_x: 'left'
+        anchor_y: 'bottom'
+        padding: 5
+        Button:
+            id: _Device_Credentials_Button_
+            text: 'Set Device \nCredentials'
+            size_hint: 0.16, 0.08
+            on_release: root.OpenCredentialPopup()
     AnchorLayout:
         anchor_x: 'center'
         anchor_y: 'bottom'
