--- a/Menus/SecurityConfMenu.kv
+++ b/Menus/SecurityConfMenu.kv
@@ -63,6 +63,15 @@
             main_menu_root: root
             size_hint: 0.9, None
     AnchorLayout:
+        anchor_x: 'left'
+        anchor_y: 'bottom'
+        padding: 5
+        Button:
+            id: _Device_Credentials_Button_
+            text: 'Set Device \nCredentials'
+            size_hint: 0.16, 0.08
+            on_release: root.OpenCredentialPopup()
+    AnchorLayout:
         anchor_x: 'center'
         anchor_y: 'bottom'
         padding: 15
@@ -185,6 +194,15 @@
             main_menu_root: root
             size_hint: 0.9, None
     AnchorLayout:
+        anchor_x: 'left'
+        anchor_y: 'bottom'
+        padding: 5
+        Button:
+            id: _Device_Credentials_Button_
+            text: 'Set Device \nCredentials'
+            size_hint: 0.16, 0.08
+            on_release: root.OpenCredentialPopup()
+    AnchorLayout:
         anchor_x: 'center'
         anchor_y: 'bottom'
         padding: 15
@@ -254,6 +272,15 @@
             pos_hint:{'center_x':0.6, 'y':0.6}
             main_menu_root: root
             size_hint: 0.7, None
+    AnchorLayout:
+        anchor_x: 'left'
+        anchor_y: 'bottom'
+        padding: 5
+        Button:
+            id: _Device_Credentials_Button_
+            text: 'Set Device \nCredentials'
+            size_hint: 0.16, 0.08
+            on_release: root.OpenCredentialPopup()
     AnchorLayout:
         anchor_x: 'center'
         anchor_y: 'bottom'
