Added Commenting throughout the code to improve readablity

--- a/MainApplication.kv
+++ b/MainApplication.kv
@@ -2,7 +2,7 @@
 
 #:import Factory kivy.factory.Factory
 
-
+#This KV file defines the various custom widgets it is the widgets are called throughout the code. This has been done to reduce the amount of code resue
 
 
 #Create a Custom Button Widget for an Execute Button
