--- a/Menus/BasicConfMenu.kv
+++ b/Menus/BasicConfMenu.kv
@@ -2,6 +2,9 @@
 
 #:import BasicConfMenu BasicConfMenu
 
+
+#This KV file defines the various Basic Configuration screens and widgets it is linked to the BasicConfMenu.py for defining the type of widget and the functions that are called
+
 <BasicConfMenu@Screen>:
     on_pre_enter: app.current_screen = "Basic Configuration"
     on_pre_enter: app.previous_screen.append('BasicConfMenuScreen')
