--- a/MainMenu.kv
+++ b/MainMenu.kv
@@ -4,6 +4,8 @@
 
 #:import MainMenu MainMenu
 
+#This KV file defines the various Main Menu screens and widgets it is linked to the MainMenu.py for defining the type of widget and the functions that are called
+
 
 
 #Creates the Main Menu Screen and layout the widgets as desired
