--- a/Menus/SecurityConfMenu.kv
+++ b/Menus/SecurityConfMenu.kv
@@ -2,6 +2,9 @@
 
 #:import SecurityConfMenu SecurityConfMenu
 
+#This KV file defines the various Security Configuration screens and widgets it is linked to the SecurityConfMenu.py for defining the type of widget and the functions that are called
+
+
 <SecurityConfMenu@Screen>:
     on_pre_enter: app.current_screen = "Security Configuration"
     on_pre_enter: app.previous_screen.append('SecurityConfMenuScreen')
