--- a/Menus/SetStorageLocation.kv
+++ b/Menus/SetStorageLocation.kv
@@ -2,6 +2,7 @@
 
 #:import SetStorageLocation SetStorageLocation
 
+#This KV file defines the various Set Storage Location screens and widgets it is linked to the SetStorageLocation.py for defining the type of widget and the functions that are called
 
 
 <SetStorageLocation>:
